@@ -6,6 +6,8 @@ python-apt (0.8.0~exp2) UNRELEASED; urgency=low
   * all: Fix all instances of ResourceWarning about unclosed files
   * tests/test_apt_cache.py: Use assertTrue() instead of assert_()
   * apt_pkg: Raise error when parse_commandline gets empty argv (LP: #707416)
+  * apt_pkg: Fix time_to_str, time_rfc1123 to accept more correct values
+    (time_to_str accepts unsigned long, time_rfc1123 long long, y2k31-correct).
 
  -- Julian Andres Klode <jak@debian.org>  Wed, 06 Apr 2011 09:46:52 +0200
 
